--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.4.2",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
