--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bs5-lightbox": "^1.8.3",
     "native-querystring": "^1.1.1",
     "nostr-tools": "^1.10.1",
+    "nostr-zap": "^0.18.0",
     "platform-detect": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
