--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
     "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
