--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
     "serve": "^14.2.0",
