--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "bs5-lightbox": "^1.8.3",
+    "formik": "^2.4.2",
     "native-querystring": "^1.1.1",
     "nostr-tools": "^1.10.1",
     "nostr-zap": "^0.18.0",
@@ -21,10 +22,12 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
     "serve": "^14.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
