--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "nostr-app-manager",
   "version": "0.1.0",
   "dependencies": {
-    "@nostr-dev-kit/ndk": "^0.3.13",
+    "@nostrband/ndk": "^0.7.8",
+    "@nostrband/nostr-tools": "^1.14.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,7 +11,6 @@
     "bs5-lightbox": "^1.8.3",
     "formik": "^2.4.2",
     "native-querystring": "^1.1.1",
-    "nostr-tools": "^1.10.1",
     "nostr-zap": "^0.18.0",
     "platform-detect": "^3.0.1",
     "react": "^18.2.0",
