--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-helmet": "^6.1.0",
     "react-intl": "^6.4.2",
     "react-query": "^3.39.3",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
