--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nostr-app-manager",
   "version": "0.1.0",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.5",
     "@nostrband/ndk": "^0.7.8",
     "@nostrband/nostr-tools": "^1.14.2",
     "@testing-library/jest-dom": "^5.16.5",
