--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.5",
+    "@mui/material": "^5.14.6",
     "@nostrband/ndk": "^0.7.8",
     "@nostrband/nostr-tools": "^1.14.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.3",
     "bs5-lightbox": "^1.8.3",
     "formik": "^2.4.2",
+    "lodash": "^4.17.21",
     "native-querystring": "^1.1.1",
     "nostr-zap": "^0.18.0",
     "platform-detect": "^3.0.1",
