--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "bs5-lightbox": "^1.8.3",
+    "chart.js": "^3.9.1",
     "formik": "^2.4.2",
     "lodash": "^4.17.21",
     "native-querystring": "^1.1.1",
@@ -21,6 +22,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
+    "react-chartjs-2": "^4.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-intl": "^6.4.2",
