--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-select": "^5.7.4",
     "react-textarea-autosize": "^8.5.2",
     "react-toastify": "^9.1.3",
