--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aphrodite": "^2.4.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "bs5-lightbox": "^1.8.3",
@@ -20,6 +21,7 @@
     "nostr-zap": "^0.18.0",
     "platform-detect": "^3.0.1",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-chartjs-2": "^4.3.1",
