--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mui/material": "^5.14.6",
     "@nostrband/ndk": "^0.7.8",
     "@nostrband/nostr-tools": "^1.14.4",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -32,6 +33,7 @@
     "react-intl": "^6.4.2",
     "react-query": "^3.39.3",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
