--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.6",
+    "@nostr-dev-kit/ndk": "^2.0.3",
     "@nostrband/ndk": "^0.7.8",
     "@nostrband/nostr-tools": "^1.14.4",
     "@reduxjs/toolkit": "^1.9.7",
@@ -12,7 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aphrodite": "^2.4.0",
-    "axios": "^1.4.0",
+    "axios": "^1.5.1",
     "bootstrap": "^5.2.3",
     "bs5-lightbox": "^1.8.3",
     "chart.js": "^3.9.1",
