--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^9.5.3",
     "react-intl": "^6.4.2",
     "react-query": "^3.39.3",
     "react-rating-stars-component": "^2.2.0",
